----------------------------------------------------------------------
 OmegaT 3.5.3 update 1
----------------------------------------------------------------------
   4 Enhancements
   6 Bug fixes
   2 Localisation updates
----------------------------------------------------------------------
3.5.3 update 1 vs 3.5.3

  Other changes:

 - Support 3.0.0 StarDict dictionaries

 - To reflect TaaS's change of policy, a key is now mandatory to use the 
service

  - Exclude .DS_Store files from translation by default

  - When using the line length limit in the Text filter, the filter tries
preventing cutting after "\" and ":" and before "{" and ":"

 Bug fixes:

  - Stop searching when Find window is closed
  https://sourceforge.net/p/omegat/bugs/412/

  - Trim whitespace on LingvoDSL dictionary entries
  https://sourceforge.net/p/omegat/bugs/786/

  - Closing Match Statistics window while it's updating the stats doesn't
stop the calculations
  https://sourceforge.net/p/omegat/bugs/789/

  - An error was fixed with -Dhttp.proxyHost and -Dhttp.proxyPort in 
Linux kaptain launcher

  - When using the line length limit in the Text filter, a trailing space
remained at the end of lines when the line was cut on a space. 

  - Word: specific tag processing not working when extension in uppercase 
  https://sourceforge.net/p/omegat/bugs/794/

  Localisation Updates:

  - Italian localisation updated to 3.5.3 (UI, documentation, scripts, readme)
  - Brazilian Portuguese updated to 3.5 (UI)

----------------------------------------------------------------------
 OmegaT 3.5.3 (2015-12-02)
----------------------------------------------------------------------
  23 Enhancements
   6 Bug fixes
   8 Localisation updates
----------------------------------------------------------------------
3.5.3 vs 3.5.2 update 1

  Implemented requests:  

  - Add sentence case to Shift+F3 case change 
  https://sourceforge.net/p/omegat/feature-requests/1134/
