@@ -1,0 +1,3 @@
+ID=Value
+# NOI18N
+ID2=Value2
